outlier investigation : goals cored from long distance and not empty net

--- a/main_Milestone-2.ipynb
+++ b/main_Milestone-2.ipynb
@@ -446,11 +446,110 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04289de7-98b7-41c2-aca7-47968e917dc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "faraway_goals = train_data[(train_data['shotDistance'] > 30) & (train_data['typeDescKey'] == 'goal')]\n",
+    "\n",
+    "grouped_df = faraway_goals.groupby(['shotType']).count()\n",
+    "\n",
+    "print(grouped_df['idGame'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd69babd-479b-43f5-8e7c-6d585aa28dd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "faraway_goals[faraway_goals['shotType'] == 'wrap-around']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "897b8bd3-5c5e-4929-9bce-6c80c9f07058",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pour l'evenement 47255 du match 2016020779, le type de tir n'est pas correct car un wrap-around ne peut pas se faire aussi loin\n",
+    "# voir: https://www.nhl.com/gamecenter/pit-vs-stl/2017/02/04/2016020779/playbyplay\n",
+    "# pour l'evenement 135239 du match 2017020853, le type de tir n'est pas correct car un wrap-around ne peut pas se faire aussi loin\n",
+    "# voir: https://www.nhl.com/gamecenter/pit-vs-stl/2018/02/11/2017020853/playbyplay\n",
+    "\n",
+    "# video wrap-around: https://www.youtube.com/watch?v=tmRibUXW8RE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70430dae-7cfd-4313-a93a-bb4b9e957602",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "defensive_zone_goals = train_data[(train_data['shotDistance'] > 80) & (train_data['typeDescKey'] == 'goal')]\n",
+    "\n",
+    "grouped_df = defensive_zone_goals.groupby(['shotType','emptyGoalNet']).count()\n",
+    "\n",
+    "print(grouped_df['idGame'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5153c52a-f03a-4929-b055-979d2d33014f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "defensive_zone_goals[(defensive_zone_goals['shotType'] == 'backhand') & (defensive_zone_goals['emptyGoalNet'] == False)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46420dc1-035d-451c-90d8-a0ca65527ac5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# l'venement 54362 du match 2016020894 n'a pas les bonnes coordonées. \n",
+    "# voir la vidéo: https://www.youtube.com/watch?v=lM6JXVW0-YY du match. le but de Mats Zuccarello en période de shoot-out\n",
+    "# est fait du coté droit, non du coté gauche\n",
+    "\n",
+    "# l'evenemnt 80622 du match 2017020004 n'a pas les bonnes coordonées.\n",
+    "# voir la vidéo: https://www.youtube.com/watch?v=WpIGr7srlLY. le but de Kevin Labanc est du mauvais coté"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "614c5347-d34b-4b9a-8f49-5d96230d3e3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "defensive_zone_goals[(defensive_zone_goals['emptyGoalNet'] == False) & (defensive_zone_goals['shotDistance'] > 110)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "157aed92-34a5-40bb-8c0c-fdc7046d7e1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# l'evenemnet 1806 n,est pas le bon zoneShoot/zoneCode. il a comme zoneShoot D (defensive) alors que quand on regarde le but de\n",
+    "# John Tavares, il le marque bien dans la zone offensive https://www.youtube.com/watch?v=MO7vAygX2_c"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ad96b03ba9792ed",
    "metadata": {},
    "source": [
-    "## 3. Modèles de base"
+    "# Modèles de base"
    ]
   },
   {
