section 2 - question 3: addition of blog paragraph

--- a/main_Milestone-2.ipynb
+++ b/main_Milestone-2.ipynb
@@ -10,8 +10,10 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "b003ab98-0656-4769-a091-34c2d40270b8",
    "metadata": {},
+   "outputs": [],
    "source": [
     "from cProfile import label\n",
     "\n",
@@ -22,22 +24,20 @@
     "from streamlit import columns\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "935a0893-61e9-45a2-8c74-83de62ee46a9",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# all imports\n",
     "from src import *\n",
     "import pandas as pd\n",
     "import os.path"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -49,8 +49,10 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "ba8e508b87e75d",
    "metadata": {},
+   "outputs": [],
    "source": [
     "filename = './data/dataframe_2016_to_2019.csv'\n",
     "start_year = 2016\n",
@@ -68,19 +70,17 @@
     "                                                         clean_playoff,\n",
     "                                                         np.arange(start_year, end_year + 1).tolist())\n",
     "    df_2016_to_2019.to_csv(filename, index=False)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "30d106063dac160f",
    "metadata": {},
+   "outputs": [],
    "source": [
     "train_data = pd.read_csv(filename)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,28 +100,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "b0fab71b229810cc",
    "metadata": {},
+   "outputs": [],
    "source": [
     "train_data['isGoal'] = train_data['typeDescKey'].apply(lambda x: 1 if x == 'goal' else 0)\n",
     "train_data['emptyGoalNet'] = train_data['emptyGoalNet'].astype(int)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "823381d6fa2ec155",
    "metadata": {},
+   "outputs": [],
    "source": [
     "count_table = pd.crosstab(train_data['isGoal'], train_data['typeDescKey'])\n",
     "# count_table2 = pd.crosstab(train_data['emptyGoalNet_0_1'],train_data['emptyGoalNet'])\n",
     "\n",
     "count_table\n",
     "# count_table2"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,8 +133,10 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "69b746540f59f542",
    "metadata": {},
+   "outputs": [],
    "source": [
     "## Add in advancedVisualisation (by Youry)\n",
     "def histogram_2_variables(df, x, hue, bins, xlabel, ylabel, title, legendTitle, legendLabels):\n",
@@ -150,9 +152,7 @@
     "histogram_2_variables(df=train_data, x='shotDistance', hue='isGoal', bins=20, xlabel='Distance du tir',\n",
     "                      ylabel='Nombre de tirs', title='Histogramme du nombre de tirs par distance (buts et non-buts)',\n",
     "                      legendTitle='Est-ce un but?', legendLabels=['But', 'Non-but'])"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -164,15 +164,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "82c884801d8862b3",
    "metadata": {},
+   "outputs": [],
    "source": [
     "histogram_2_variables(train_data, x='shotAngle', hue='isGoal', bins=20, xlabel='Angle du tir', ylabel='Nombre de tirs',\n",
     "                      title='Histogramme du nombre de tirs par angle (buts et non-buts)', legendTitle='Est-ce un but?',\n",
     "                      legendLabels=['But', 'Non-but'])"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -184,8 +184,10 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "8ffc00609d6ad278",
    "metadata": {},
+   "outputs": [],
    "source": [
     "def histogram2D_2_variables(df, x, y, bins, label, xlabel, ylabel, title):\n",
     "    # Remove rows with NaN values\n",
@@ -204,9 +206,7 @@
     "histogram2D_2_variables(train_data, x='shotDistance', y='shotAngle', bins=20, label='Nombre de tirs',\n",
     "                        xlabel='Distance du tir', ylabel='Angle du tir',\n",
     "                        title='Histogramme 2D du nombre de tirs par distance et angle')"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -216,8 +216,10 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "8ed7c90cde829916",
    "metadata": {},
+   "outputs": [],
    "source": [
     "def histogram2D_2_variables_seaborn(df, x, y, kind, title, xlabel, ylabel):\n",
     "    # Remove rows with NaN values\n",
@@ -235,9 +237,7 @@
     "histogram2D_2_variables_seaborn(train_data, x='shotDistance', y='shotAngle', kind='hist',\n",
     "                                title=\"Histogramme 2D de la Distance et de l'Angle\", xlabel='Distance du tir',\n",
     "                                ylabel='Angle du tir')"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -257,21 +257,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "354536725e03ce07",
    "metadata": {},
+   "outputs": [],
    "source": [
     "df_distance_goal_rate = train_data.groupby('shotDistance')['isGoal'].mean().reset_index()\n",
     "df_distance_goal_rate.columns = ['shotDistance', 'goalRate']\n",
     "\n",
     "df_distance_goal_rate\n"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "e1dbfcf0bfaa643a",
    "metadata": {},
+   "outputs": [],
    "source": [
     "def lineplot_2_variables(df, x, y, title, xlabel, ylabel):\n",
     "    plt.figure(figsize=(10, 6))\n",
@@ -285,14 +287,14 @@
     "\n",
     "lineplot_2_variables(df=df_distance_goal_rate, x='shotDistance', y='goalRate',\n",
     "                     title='Taux de but en fonction de la distance', xlabel='Distance du tir', ylabel='Taux de but')"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "28f06856f5182f64",
    "metadata": {},
+   "outputs": [],
    "source": [
     "def scatterplot_2_variables(df, x, y, color, s, title, xlabel, ylabel):\n",
     "    plt.figure(figsize=(10, 6))\n",
@@ -306,9 +308,7 @@
     "\n",
     "scatterplot_2_variables(df=df_distance_goal_rate, x='shotDistance', y='goalRate', color='green', s=20,\n",
     "                        title='Taux de but en fonction de la distance', xlabel='Distance du tir', ylabel='Taux de but')"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -320,27 +320,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "9d73a978a9e107e3",
    "metadata": {},
+   "outputs": [],
    "source": [
     "df_angle_goal_rate = train_data.groupby('shotAngle')['isGoal'].mean().reset_index()\n",
     "df_angle_goal_rate.columns = ['shotAngle', 'goalRate']\n",
     "\n",
-    "df_angle_goal_rate\n"
-   ],
-   "outputs": [],
-   "execution_count": null
+    "df_angle_goal_rate"
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "9377ab40ff1e27b7",
    "metadata": {},
+   "outputs": [],
    "source": [
     "scatterplot_2_variables(df=df_angle_goal_rate, x='shotAngle', y='goalRate', color='green', s=20,\n",
     "                        title='Taux de but en fonction de l\\'angle', xlabel='Angle du tir', ylabel='Taux de but')"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -351,121 +351,108 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3308d338-9f62-469f-90ad-2a1d5806c2e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_goals_by_distance(train_data)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "d78a3f7c21677928",
+   "id": "dab78bb9-a65a-4a9a-83a4-a19311c0e7a6",
    "metadata": {},
    "source": [
-    "#### Verifier but net non vide sur l'équipe adverse depuis l'intérieur de votre zone défensive"
+    "### Nombre de buts net non vides marqués depuis l'intérieur de la zone défensive"
    ]
   },
   {
    "cell_type": "code",
-   "id": "4884c4ad-24c0-48df-97b4-e94c01d6764f",
+   "execution_count": null,
+   "id": "1b29a7e8-d323-4297-8886-34deb30773fc",
    "metadata": {},
-   "source": [
-    "plot_goals_by_distance(train_data)"
-   ],
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "filtered_data = train_data[(train_data['shotDistance'] > 90) & (train_data['typeDescKey'] == 'goal') & (defensive_zone_goals['emptyGoalNet'] == 0)]\n",
+    "len(filtered_data)"
+   ]
   },
   {
    "cell_type": "code",
-   "id": "04289de7-98b7-41c2-aca7-47968e917dc8",
+   "execution_count": null,
+   "id": "f1c4e345-811f-4578-9a8c-d0d16a9ac23f",
    "metadata": {},
-   "source": [
-    "faraway_goals = train_data[(train_data['shotDistance'] > 30) & (train_data['typeDescKey'] == 'goal')]\n",
-    "\n",
-    "grouped_df = faraway_goals.groupby(['shotType']).count()\n",
-    "\n",
-    "print(grouped_df['idGame'])"
-   ],
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "filtered_data.loc[54362,:]"
+   ]
   },
   {
    "cell_type": "code",
-   "id": "bd69babd-479b-43f5-8e7c-6d585aa28dd4",
+   "execution_count": null,
+   "id": "ef8264b5-a914-4c97-829f-8e598f61f571",
    "metadata": {},
-   "source": [
-    "faraway_goals[faraway_goals['shotType'] == 'wrap-around']"
-   ],
    "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "code",
-   "id": "897b8bd3-5c5e-4929-9bce-6c80c9f07058",
-   "metadata": {},
    "source": [
-    "# pour l'evenement 47255 du match 2016020779, le type de tir n'est pas correct car un wrap-around ne peut pas se faire aussi loin\n",
-    "# voir: https://www.nhl.com/gamecenter/pit-vs-stl/2017/02/04/2016020779/playbyplay\n",
-    "# pour l'evenement 135239 du match 2017020853, le type de tir n'est pas correct car un wrap-around ne peut pas se faire aussi loin\n",
-    "# voir: https://www.nhl.com/gamecenter/pit-vs-stl/2018/02/11/2017020853/playbyplay\n",
-    "\n",
-    "# video wrap-around: https://www.youtube.com/watch?v=tmRibUXW8RE"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "code",
-   "id": "70430dae-7cfd-4313-a93a-bb4b9e957602",
-   "metadata": {},
-   "source": [
-    "defensive_zone_goals = train_data[(train_data['shotDistance'] > 80) & (train_data['typeDescKey'] == 'goal')]\n",
-    "\n",
-    "grouped_df = defensive_zone_goals.groupby(['shotType', 'emptyGoalNet']).count()\n",
-    "\n",
-    "print(grouped_df['idGame'])"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "code",
-   "id": "5153c52a-f03a-4929-b055-979d2d33014f",
-   "metadata": {},
-   "source": [
-    "defensive_zone_goals[(defensive_zone_goals['shotType'] == 'backhand') & (defensive_zone_goals['emptyGoalNet'] == False)]"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "code",
-   "id": "46420dc1-035d-451c-90d8-a0ca65527ac5",
-   "metadata": {},
-   "source": [
-    "# l'venement 54362 du match 2016020894 n'a pas les bonnes coordonées. \n",
+    "# l'venement 54362 (filtered_data.loc[54362,:]) du match 2016020894 n'a pas les bonnes coordonées. \n",
     "# voir la vidéo: https://www.youtube.com/watch?v=lM6JXVW0-YY du match. le but de Mats Zuccarello en période de shoot-out\n",
     "# est fait du coté droit, non du coté gauche\n",
     "\n",
     "# l'evenemnt 80622 du match 2017020004 n'a pas les bonnes coordonées.\n",
-    "# voir la vidéo: https://www.youtube.com/watch?v=WpIGr7srlLY. le but de Kevin Labanc est du mauvais coté"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "code",
-   "id": "614c5347-d34b-4b9a-8f49-5d96230d3e3d",
-   "metadata": {},
-   "source": [
-    "defensive_zone_goals[(defensive_zone_goals['emptyGoalNet'] == False) & (defensive_zone_goals['shotDistance'] > 110)]"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "code",
-   "id": "157aed92-34a5-40bb-8c0c-fdc7046d7e1f",
-   "metadata": {},
-   "source": [
-    "# l'evenemnet 1806 n,est pas le bon zoneShoot/zoneCode. il a comme zoneShoot D (defensive) alors que quand on regarde le but de\n",
+    "# voir la vidéo: https://www.youtube.com/watch?v=WpIGr7srlLY. le but de Kevin Labanc est du mauvais coté\n",
+    "\n",
+    "# l'evenemnet 1806 n'a pas le bon zoneShoot/zoneCode. il a comme zoneShoot D (defensive) alors que quand on regarde le but de\n",
     "# John Tavares, il le marque bien dans la zone offensive https://www.youtube.com/watch?v=MO7vAygX2_c"
-   ],
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5e0346e-df4d-4c25-bea5-ed7effb1d2c4",
+   "metadata": {},
+   "source": [
+    "### Nombre de buts marqués depuis l'intérieur de la zone défensive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d246ecf-bf7e-4917-9ba0-3bdc90b15d94",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "filtered_data = train_data[(train_data['shotDistance'] > 90) & (train_data['typeDescKey'] == 'goal')]\n",
+    "\n",
+    "grouped_df = filtered_data.groupby(['shotType']).count()\n",
+    "\n",
+    "print(grouped_df['idGame'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0af22d9e-6002-4dab-9365-2cd7e5ed0b22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_data[filtered_data['shotType'] == 'wrap-around']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c29f1bbb-d35f-485b-96c1-0fc38a4fa342",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pour l'evenement 47255 du match 2016020779, le type de tir n'est pas correct car un wrap-around ne peut pas se faire aussi loin\n",
+    "# voir: https://www.nhl.com/gamecenter/pit-vs-stl/2017/02/04/2016020779/playbyplay\n",
+    "# video: https://www.youtube.com/watch?v=CHcbWHyRDbE. Sidney Crosby a bien tiré depuis la position (3,1). donc les coordonées et la distance sont \n",
+    "# bonnes. Le type de tir n'est pas le bon. \n",
+    "\n",
+    "# video wrap-around: https://www.youtube.com/watch?v=tmRibUXW8RE"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -477,15 +464,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "626eff9f8b26b291",
    "metadata": {},
+   "outputs": [],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -497,40 +484,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "657b093261e8e471",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Préparation de la caractéristique et de la cible\n",
     "X = train_data[['shotDistance']].dropna()\n",
     "y = train_data['isGoal'][X.index]"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "74e8a02980cd3dee",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Division des données en ensembles d'entraînement et de validation\n",
     "X_train, X_val, y_train, y_val = train_test_split(X, y)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "664cc2a5b3000006",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# # Vérification des types et absence de NaN\n",
     "# print(\"Type de X_train:\", type(X_train))\n",
     "# print(\"Type de y_train:\", type(y_train))\n",
     "# print(\"Valeurs manquantes dans X_train:\", X_train.isnull().sum().sum())\n",
     "# print(\"Valeurs manquantes dans y_train:\", y_train.isnull().sum())"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -542,14 +529,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "17ac8579f726925",
    "metadata": {},
+   "outputs": [],
    "source": [
     "clf = LogisticRegression()\n",
     "clf.fit(X_train, y_train)"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -561,30 +548,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
    "id": "542df2e5872b7863",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Prédiction et évaluation\n",
     "y_pred = clf.predict(X_val)\n",
     "accuracy = accuracy_score(y_val, y_pred)\n",
     "print(f\"Précision du modèle sur l'ensemble de validation: {accuracy:.2f}\")"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
+   "id": "db0224009dcc7d52",
+   "metadata": {},
    "source": [
     "## Question 5\n",
     "\n",
     "### Ajout de l'artefact sur Wandb"
-   ],
-   "id": "db0224009dcc7d52"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d7f485859221d38d",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import wandb\n",
     "\n",
@@ -611,18 +601,15 @@
     "    my_table = wandb.Table(dataframe=train_data[train_data['idGame'] == 2017021065])\n",
     "    artifact.add(my_table, \"wpg_v_wsh_2017021065\")\n",
     "    run.log_artifact(artifact)\n"
-   ],
-   "id": "d7f485859221d38d",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": "",
+   "execution_count": null,
    "id": "f7be9c6cd03aff4f",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": []
   }
  ],
  "metadata": {
