removal of logic that saves goal by distance images at every run

--- a/main_Milestone-2.ipynb
+++ b/main_Milestone-2.ipynb
@@ -375,7 +375,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filtered_data = train_data[(train_data['shotDistance'] > 90) & (train_data['typeDescKey'] == 'goal') & (defensive_zone_goals['emptyGoalNet'] == 0)]\n",
+    "filtered_data = train_data[(train_data['shotDistance'] > 90) & (train_data['typeDescKey'] == 'goal') & (train_data['emptyGoalNet'] == 0)]\n",
     "len(filtered_data)"
    ]
   },
