--- a/blogpost-template-main/_posts/2024-11-16-ift6758-milestone-2.md
+++ b/blogpost-template-main/_posts/2024-11-16-ift6758-milestone-2.md
@@ -15,19 +15,20 @@ distinction entre les buts marqués avec filets vides et les buts marqués avec 
 
 Sur la base de ce graphique, on a fait les remarques suivantes :
 
-- dans le cas ou les filets ne sont pas vides, plus on s'éloigne du filet moins il y'a de buts.
+- dans le cas où les filets ne sont pas vides, plus on s'éloigne du filet moins il y a de buts.
   Autrement dit, la majorité des buts nets non vides sont marqués proche du filet. Cela fait du sens vu que
-  car quand on est proche du filet, un tir a moins de chance d'être bloqué ou arrêté par le gardien.
-- dans le cas ou les filets sont vides, il n'y a que très peu de buts qui sont marqués peu importe
-  qu'on soit proches ou loin des filets. Cela s'explique par le fait que les équipes ne peuvent se passer de leur
+  quand on est proche du filet, un tir a moins de chance d'être bloqué ou arrêté par le gardien.
+- dans le cas où les filets sont vides, il n'y a que très peu de buts qui sont marqués peu importe que l'on soit proche ou loin des filets.
+  Cela s'explique par le fait que les équipes ne peuvent se passer de leur
   gardien
-  qu'a des moments particuliers. Par exemple, si une équipe perd par un ou deux buts en fin de match,
+  qu'à des moments particuliers.
+  Par exemple, si une équipe perd par un ou deux buts en fin de match,
   elle peut retirer son gardien pour ajouter un joueur de patinage supplémentaire.
 
 Vu la rareté des buts nets non vides marqués de loin, il était naturel qu'on regarde ces évènements plus en profondeur.
-Tout d'abord, on a observé qu'il y'avait **118 buts** nets non vides marqués l'intérieur de la zone défensive (à une
+Tout d'abord, on a observé qu'il y avait **118 buts** nets non vides marqués l'intérieur de la zone défensive (à une
 distance plus grande que 90 pieds)
-Parmi ces événements, on a remarqué que certains d'entre eux avaient des informations erronées.
+Parmi ces évènements, on a remarqué que certains d'entre eux avaient des informations erronées.
 Par exemple, dans le cadre du match opposant les New-York Rangers aux Toronto Maple Leafs qui s'est joué le **23 février
 2017**, le but
 marqué par Mats Zuccarello durant la période de shoot-out a été marqué du côté droit de la patinoire (voir la
@@ -44,13 +45,13 @@ Par exemple, dans le cadre du match opposant les Pittsburgh Penguins aux St. Lou
 Sidney Crosby a marqué un but de type **wrist** durant la 3ième période du match depuis le centre de la patinoire (voir
 la vidéo [ici](https://www.youtube.com/watch?v=CHcbWHyRDbE)). Cependant,
 dans les données qu'on a récupérées sur le site de la NHL, le but est enrégistré comme étant de type **wrap-around**, ce
-qui impossible car un tir de type **wrap-around** est toujours proche des filets.
+qui est impossible, car un tir de type **wrap-around** est toujours proche des filets.
 
 ## Ingénierie des caractéristiques II
 
 Dans cette section, nous allons voir de nouvelles d'ajouter des caractéristiques pertinentes pour améliorer notre modèle de
 prédiction.
-Certaines caractéristiques ont simplement été adapté par rapport au Milestone 1.
+Certaines caractéristiques ont simplement été adaptées par rapport au Milestone 1.
 
 #### 1. Caractéristiques de base
 
@@ -59,21 +60,21 @@ Certaines caractéristiques ont simplement été adapté par rapport au Mileston
 - Période de jeu (periodNumber) : période en cours du match.
 - Coordonnées x (xCoord) : abscisse de l'action par rapport au centre du terrain (ordonnée à l'origine)
 - Coordonnées y (yCoord) : ordonnées de l'action par rapport au centre (ordonnée à l'origine)
-- Distance de tir (shotDistance) : distance euclidienne (en pied) du tir par rapport au filet.
+- Distance de tir (shotDistance) : distance euclidienne (en pieds) du tir par rapport au filet.
   Pour cela, prendre en compte la période et le côté de l'équipe
 - Angle de tir (shotAngle) : angle du tir (de 0 à 90°) par rapport au filet.
 - Type de tir (shotType) : type de tir utilisé (slap, wrist, etc...).
 
-#### 2. Caractéristiques des événements précédents
+#### 2. Caractéristiques des évènements précédents
 
-- Dernier type d'événement (previousEventType) : type d'événement ayant précédé le tir (blocked-shot, stoppage, etc...).
-- Coordonnées x précédente (previousXCoord) : coordonnée x du dernier événement (manquant s'il s'agit d'un stoppage)
-- Coordonnées y précédente (previousYCoord) : coordonnée y du dernier événement (manquant s'il s'agit d'un stoppage)
-- Temps depuis le dernier événement (timeSinceLastEvent) : intervalle de temps entre l'événement précédent et le tir.
-- Distance depuis le dernier événement (distanceFromLastEvent) : distance euclidienne (en pied) parcourue depuis
+- Dernier type d'évènement (previousEventType) : type d'évènement ayant précédé le tir (blocked-shot, stoppage, etc...).
+- Coordonnées x précédente (previousXCoord) : coordonnée x du dernier évènement (manquant s'il s'agit d'un stoppage)
+- Coordonnées y précédente (previousYCoord) : coordonnée y du dernier évènement (manquant s'il s'agit d'un stoppage)
+- Temps depuis le dernier évènement (timeSinceLastEvent) : intervalle de temps entre l'évènement précédent et le tir.
+- Distance depuis le dernier évènement (distanceFromLastEvent) : distance euclidienne (en pieds) parcourue depuis
   l'évènement précédent.
 - Rebond (rebound) : Indique si le tir est un rebond à la condition qu'il précède d'un tir (évènement : shot-on-goal)
 - Changement d'angle de tir (reboundAngleShot) : calcule de l'angle entre le tir précédent et le tir actuel (si et
   seulement le tir est un rebond).
-- Vitesse depuis le dernier évènement (speedFromLastEvent) : distance depuis le dernier événement (en pied) divisé par le temps écoulé (en
+- Vitesse depuis le dernier évènement (speedFromLastEvent) : distance depuis le dernier évènement (en pieds) divisé par le temps écoulé (en
   sec)
