Corrections mineures et ajout du README.md pour le Milestone 2

--- a/main_Milestone-2.ipynb
+++ b/main_Milestone-2.ipynb
@@ -606,14 +606,24 @@
    "execution_count": null
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Question 6\n",
+    "\n",
+    "### Implémentation des réseaux de neurones"
+   ],
+   "id": "2da3a95018a2af0b"
+  },
+  {
    "cell_type": "code",
    "id": "f7be9c6cd03aff4f",
    "metadata": {},
    "source": [
-    "config.INPUTS_DOCUMENTS = X.to_numpy()\n",
-    "config.LABELS_DOCUMENTS = y.to_numpy()\n",
-    "model_start.optimize(\"MLP_H1\")\n",
-    "model_start.predict_data(\"MLP_H1\")"
+    "# Chargement des données\n",
+    "config.INPUTS_DATA = X_train.to_numpy()\n",
+    "config.LABELS_DATA = y_train.to_numpy()\n",
+    "config.TEST_DATA = X_val.to_numpy()"
    ],
    "outputs": [],
    "execution_count": null
@@ -621,7 +631,13 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "#model_start.optimize(\"MLP_H1\") # Optimisation pour trouver les meilleurs hyper-paramètres\n",
+    "\n",
+    "# Évaluation sur l'ensemble de test\n",
+    "y_pred = model_start.predict_data(\"Perceptron\") #Options: \"Perceptron\", \"MLP_H1\", \"MLP_H2\"\n",
+    "f1_score(y_pred, y_val, average=\"macro\")"
+   ],
    "id": "4d554f96dd5d9b69",
    "outputs": [],
    "execution_count": null
