Ajout des prédictions Perceptron

--- a/main_Milestone-2.ipynb
+++ b/main_Milestone-2.ipynb
@@ -554,9 +554,9 @@
     "# Prédiction et évaluation\n",
     "y_pred = clf.predict(X_val)\n",
     "accuracy = accuracy_score(y_val, y_pred)\n",
-    "f1_score = f1_score(y_val, y_pred, average=\"macro\")\n",
+    "f1 = f1_score(y_val, y_pred, average=\"macro\")\n",
     "print(f\"Précision du modèle sur l'ensemble de validation: {accuracy:.2f}\")\n",
-    "print(f\"F1-score du modèle sur l'ensemble de validation: {f1_score:.2f}\") "
+    "print(f\"F1-score du modèle sur l'ensemble de validation: {f1:.2f}\") "
    ],
    "outputs": [],
    "execution_count": null
@@ -636,7 +636,8 @@
     "\n",
     "# Évaluation sur l'ensemble de test\n",
     "y_pred = model_start.predict_data(\"Perceptron\") #Options: \"Perceptron\", \"MLP_H1\", \"MLP_H2\"\n",
-    "f1_score(y_pred, y_val, average=\"macro\")"
+    "f1 = f1_score(y_pred, y_val, average=\"macro\")\n",
+    "print(f\"F1-score du modèle sur l'ensemble de validation: {f1:.2f}\") "
    ],
    "id": "4d554f96dd5d9b69",
    "outputs": [],
