--- a/main_Milestone-2.ipynb
+++ b/main_Milestone-2.ipynb
@@ -632,16 +632,26 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "#model_start.optimize(\"MLP_H1\") # Optimisation pour trouver les meilleurs hyper-paramètres\n",
-    "\n",
-    "# Évaluation sur l'ensemble de test\n",
-    "y_pred = model_start.predict_data(\"Perceptron\") #Options: \"Perceptron\", \"MLP_H1\", \"MLP_H2\"\n",
-    "f1 = f1_score(y_pred, y_val, average=\"macro\")\n",
-    "print(f\"F1-score du modèle sur l'ensemble de validation: {f1:.2f}\") "
+    "# Options : \"Perceptron\", \"MLP_H1\", \"MLP_H2\"\n",
+    "# Optimisation pour trouver les meilleurs hyper-paramètres\n",
+    "#model_start.optimize(\"MLP_H1\") "
    ],
    "id": "4d554f96dd5d9b69",
    "outputs": [],
    "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Évaluation sur l'ensemble de test\n",
+    "y_pred = model_start.predict_data(\"Perceptron\")\n",
+    "f1 = f1_score(y_pred, y_val, average=\"macro\")\n",
+    "print(f\"F1-score du modèle sur l'ensemble de validation: {f1:.2f}\") "
+   ],
+   "id": "e01ba9b8c60fbeb8"
   }
  ],
  "metadata": {
