Début du blog question 6

--- a/blogpost-template-main/_posts/2024-11-16-ift6758-milestone-2.md
+++ b/blogpost-template-main/_posts/2024-11-16-ift6758-milestone-2.md
@@ -18,7 +18,8 @@ Sur la base de ce graphique, on a fait les remarques suivantes :
 - dans le cas où les filets ne sont pas vides, plus on s'éloigne du filet moins il y a de buts.
   Autrement dit, la majorité des buts nets non vides sont marqués proche du filet. Cela fait du sens vu que
   quand on est proche du filet, un tir a moins de chance d'être bloqué ou arrêté par le gardien.
-- dans le cas où les filets sont vides, il n'y a que très peu de buts qui sont marqués peu importe que l'on soit proche ou loin des filets.
+- dans le cas où les filets sont vides, il n'y a que très peu de buts qui sont marqués peu importe que l'on soit proche
+  ou loin des filets.
   Cela s'explique par le fait que les équipes ne peuvent se passer de leur
   gardien
   qu'à des moments particuliers.
@@ -49,7 +50,8 @@ qui est impossible, car un tir de type **wrap-around** est toujours proche des f
 
 ## Ingénierie des caractéristiques II
 
-Dans cette section, nous allons voir de nouvelles d'ajouter des caractéristiques pertinentes pour améliorer notre modèle de
+Dans cette section, nous allons voir de nouvelles d'ajouter des caractéristiques pertinentes pour améliorer notre modèle
+de
 prédiction.
 Certaines caractéristiques ont simplement été adaptées par rapport au Milestone 1.
 
@@ -76,5 +78,46 @@ Certaines caractéristiques ont simplement été adaptées par rapport au Milest
 - Rebond (rebound) : Indique si le tir est un rebond à la condition qu'il précède d'un tir (évènement : shot-on-goal)
 - Changement d'angle de tir (reboundAngleShot) : calcule de l'angle entre le tir précédent et le tir actuel (si et
   seulement le tir est un rebond).
-- Vitesse depuis le dernier évènement (speedFromLastEvent) : distance depuis le dernier évènement (en pieds) divisé par le temps écoulé (en
+- Vitesse depuis le dernier évènement (speedFromLastEvent) : distance depuis le dernier évènement (en pieds) divisé par
+  le temps écoulé (en
   sec)
+
+## Faites de votre mieux
+
+Nous avons commencé par utiliser des réseaux de neurones Perceptron et multicouches (MLP) pour évaluer différentes
+architectures. Le
+modèle de base (`Perceptron`) nous a servi de point de départ pour nos expérimentations. Ensuite, nous avons introduit
+des modèles plus complexes (`MLP_H1` et `MLP_H2`), avec une et deux couches cachées. Cela permettait de capturer les interactions entre les caractéristiques
+
+### Optimisation des hyper-paramètres
+
+Pour optimiser les performances de nos modèles, nous avons utilisé **Optuna** pour une optimisation bayésienne des
+hyper-paramètres.
+
+Nous avons pu optimiser les résultats dans les plages suivantes :
+
+- La **taille des batches** dans une plage de 32 à 256.
+- Le **taux d'apprentissage**, : taux d'apprentissage logarithmique entre (10⁻⁵) et (10⁻¹).
+- Le **poids de régularisation** : contrôler la complexité des modèles et éviter l'overfitting
+- Le **minority_weight** : compenser le déséquilibre des classes dans les données de hockey, où les
+  buts sont relativement rares par rapport aux tirs totaux.
+
+### Exploration des Métriques de Performance
+
+L'accuracy peut être trompeuse dans le cas de classes déséquilibrées comme les tirs au but.
+Ainsi, nous avons préféré utiliser le F1-score, qui met en balance la précision et le rappel,
+offrant une évaluation plus précise de notre capacité à identifier les buts tout en limitant les faux positifs et les
+faux négatifs.
+
+### Division des Données
+
+
+### Visualisations des Performances
+
+- **Courbes ROC/AUC**:
+-
+- **Taux de But par Centile de Probabilité** :
+
+- **Proportion Cumulée de Buts** :
+
+- **Courbe de Fiabilité** :
