--- a/main_Milestone-2.ipynb
+++ b/main_Milestone-2.ipynb
@@ -5,7 +5,9 @@
    "id": "c80872dc-29ae-49ff-b9bc-fe5d93e2e735",
    "metadata": {},
    "source": [
-    "# Milestone 2"
+    "# Milestone 2\n",
+    "\n",
+    "### Avant de commencer. Merci de lire bien attentivement le README.md pour cette seconde partie."
    ]
   },
   {
@@ -566,7 +568,7 @@
    "id": "db0224009dcc7d52",
    "metadata": {},
    "source": [
-    "## Question 5\n",
+    "## Question 4\n",
     "\n",
     "### Ajout de l'artefact sur Wandb"
    ]
@@ -643,15 +645,15 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# Évaluation sur l'ensemble de test\n",
     "y_pred = model_start.predict_data(\"Perceptron\")\n",
     "f1 = f1_score(y_pred, y_val, average=\"macro\")\n",
     "print(f\"F1-score du modèle sur l'ensemble de validation: {f1:.2f}\") "
    ],
-   "id": "e01ba9b8c60fbeb8"
+   "id": "e01ba9b8c60fbeb8",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
